CREATE TABLE IF NOT EXISTS mpa_ratings (
    id          INTEGER GENERATED BY DEFAULT AS IDENTITY PRIMARY KEY,
    name        VARCHAR(10) NOT NULL UNIQUE,
    description VARCHAR(255)
);

CREATE TABLE IF NOT EXISTS genres (
    id   INTEGER GENERATED BY DEFAULT AS IDENTITY PRIMARY KEY,
    name VARCHAR(50) NOT NULL UNIQUE
);

CREATE TABLE IF NOT EXISTS friendship_statuses (
    id   INTEGER GENERATED BY DEFAULT AS IDENTITY PRIMARY KEY,
    name VARCHAR(20) NOT NULL UNIQUE
);

CREATE TABLE IF NOT EXISTS users (
    id       BIGINT GENERATED BY DEFAULT AS IDENTITY PRIMARY KEY,
    email    VARCHAR(255) NOT NULL UNIQUE,
    login    VARCHAR(255) NOT NULL UNIQUE,
    name     VARCHAR(255),
    birthday DATE NOT NULL
);

CREATE TABLE IF NOT EXISTS films (
    id            BIGINT GENERATED BY DEFAULT AS IDENTITY PRIMARY KEY,
    name          VARCHAR(255) NOT NULL,
    description   VARCHAR(200),
    release_date  DATE NOT NULL,
    duration      INTEGER NOT NULL,
    mpa_rating_id INTEGER REFERENCES mpa_ratings (id) ON DELETE RESTRICT,
    CONSTRAINT films_duration_positive CHECK (duration > 0)
);

CREATE TABLE IF NOT EXISTS film_genres (
    film_id  BIGINT  NOT NULL REFERENCES films (id) ON DELETE CASCADE,
    genre_id INTEGER NOT NULL REFERENCES genres (id) ON DELETE CASCADE,
    PRIMARY KEY (film_id, genre_id)
);

CREATE TABLE IF NOT EXISTS film_likes (
    film_id BIGINT NOT NULL REFERENCES films (id) ON DELETE CASCADE,
    user_id BIGINT NOT NULL REFERENCES users (id) ON DELETE CASCADE,
    PRIMARY KEY (film_id, user_id)
);

CREATE TABLE IF NOT EXISTS friendships (
    user_id   BIGINT  NOT NULL REFERENCES users (id) ON DELETE CASCADE,
    friend_id BIGINT  NOT NULL REFERENCES users (id) ON DELETE CASCADE,
    status_id INTEGER NOT NULL REFERENCES friendship_statuses (id) ON DELETE RESTRICT,
    PRIMARY KEY (user_id, friend_id),
    CONSTRAINT friendships_not_self CHECK (user_id <> friend_id)
);

CREATE INDEX IF NOT EXISTS idx_film_genres_genre_id ON film_genres (genre_id);
CREATE INDEX IF NOT EXISTS idx_film_likes_user_id ON film_likes (user_id);
CREATE INDEX IF NOT EXISTS idx_friendships_friend_id ON friendships (friend_id);
